experimentData/Jadx-detailedExperimentData/errorSamples/recompilation_failures/652/reduced-652/tmp/jadx/tmp/output.txt
Test.java:80: error: bad operand types for binary operator '<<'
        vMeth(Math.min(j, ((-5) - (-1.472f)) << iMeth(-45840)), -5, 0L);
                                             ^
  first type:  float
  second type: int
Note: Test.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
1 error
